--- a/backend/package.json
+++ b/backend/package.json
@@ -60,6 +60,7 @@
     "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
     "rate-limiter-flexible": "^8.2.1",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "zod": "^4.1.12"
   }
 }
