feat: add Cloudinary configuration and upload utility, update environment variables for cloud storage

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,12 @@ JWT_ACCESS_TOKEN_SECRET=your_jwt_access_token_secret_here
 JWT_REFRESH_TOKEN_SECRET=your_jwt_refresh_token_secret_here
 JWT_ACCESS_TOKEN_EXPIRATION=your_jwt_access_token_expiration_here
 JWT_REFRESH_TOKEN_EXPIRATION=your_jwt_refresh_token_expiration_here
+
+# CORS Configuration
+CORS_ORIGIN=your_cors_origin_here
+
+# Cloud Storage Configuration
+CLOUD_STORAGE_CLOUD_NAME=your_cloud_storage_cloud_name_here
+CLOUD_STORAGE_UPLOAD_PREFIX=your_cloud_storage_upload_prefix_here
+CLOUD_STORAGE_API_KEY=your_cloud_storage_api_key_here
+CLOUD_STORAGE_API_SECRET=your_cloud_storage_api_secret_here
