--- a/backend/.env.example
+++ b/backend/.env.example
@@ -32,3 +32,6 @@ CLOUD_STORAGE_CLOUD_NAME=your_cloud_storage_cloud_name_here
 CLOUD_STORAGE_UPLOAD_PREFIX=your_cloud_storage_upload_prefix_here
 CLOUD_STORAGE_API_KEY=your_cloud_storage_api_key_here
 CLOUD_STORAGE_API_SECRET=your_cloud_storage_api_secret_here
+
+#  Generative AI Configuration
+GENAI_API_KEY=your_genai_api_key_here
