--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
 	},
 	"dependencies": {
 		"@google/genai": "^1.30.0",
+		"axios": "^1.13.2",
 		"bcrypt": "^6.0.0",
 		"chalk": "^5.6.2",
 		"cloudinary": "^2.8.0",
